--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "client-sessions": "^0.8.0",
+    "connect-memcached": "^0.2.0",
+    "crypto": "^1.0.1",
     "express": "^4.12.3",
+    "express-session": "^1.15.6",
+    "mysql": "^2.15.0",
+    "mysql2": "^1.5.1",
     "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
     "pq": "0.0.3",
+    "sequelize": "^4.32.2",
+    "sequelize-cli": "^3.2.0",
     "swagger-express-mw": "^0.1.0"
   },
   "devDependencies": {
